# template

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  pyproject.toml
assets/: license_header.txt
examples/: sample.toml  sample.yaml
python/mylib/: __init__.py  cli.py  main.py
src/mylib/: utils.py
src/mylib/cli/: config_manager.py
