[project]
name = ""
version = "2025.0.0a1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# uv add --optional <group> <lib>
[project.optional-dependencies]

# development dependencies, local-only and not included in builds
# uv add --group <group> <lib>
[dependency-groups]
dev = ["pytest", "pre-commit", "ruff", "ipykernel"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system == 'Windows'" }, # and mac
  { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "platform_system == 'Windows'" }, # and mac
  { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# [tool.uv.sources]
# none = { workspace = true }

# [tool.uv.workspace]
# members = ["libs/*"]
# exclude = ["libs/some"]

# ---- Project build information ---- #
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mylib", "mylib.*"]

[project.scripts]
mylibcli = "mylib.cli.cli:app"
